dev-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: dev-service
 namespace: develop
 labels:
  app: dev
spec:
 type: ClusterIP
 ports:
  - protocol: TCP
    port: 80
    name: http
 selector:
  app: dev
